--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "rohit-react-slider": "^1.0.1",
-    "video-react": "^0.14.1"
+    "rohit-custom-video-react": "^0.14.2",
+    "rohit-react-slider": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
